# msdf-atlas-gen

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE.txt  Makefile  README.md  msdf-atlas-gen.aps  msdf-atlas-gen.rc  msdf-atlas-gen.sln  msdf-atlas-gen.vcxproj  msdf-atlas-gen.vcxproj.filters  resource.h  vcpkg.json
.github/workflows/: build-windows.yml
cmake/: CMakePresets.json  msdf-atlas-gen-config.cmake.in  version.cmake
msdf-atlas-gen/: AtlasGenerator.h  BitmapAtlasStorage.hpp  BitmapOverlappedAtlasStorage.h  BitmapOverlappedAtlasStorage.hpp  Charset.h  DynamicAtlas.h  DynamicAtlas.hpp  FontGeometry.cpp  FontGeometry.h  GlyphBox.h  GlyphGeometry.cpp  GlyphGeometry.h  GridAtlasPacker.cpp  GridAtlasPacker.h  ImmediateAtlasGenerator.h  ImmediateAtlasGenerator.hpp  Padding.cpp  Padding.h  RectanglePacker.cpp  RectanglePacker.h  TightAtlasPacker.cpp  TightAtlasPacker.h  Workload.cpp  artery-font-export.cpp  artery-font-export.h  bitmap-blit.cpp  bitmap-blit.h  charset-parser.cpp  csv-export.cpp  csv-export.h  glyph-generators.cpp  glyph-generators.h  image-encode.cpp  image-encode.h  image-save.h  image-save.hpp  json-export.cpp  json-export.h  main.cpp  msdf-atlas-gen.h  (+9 more)
